name:                githubblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/YellowOnion/githubblog#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Hill
maintainer:          daniel@gluo.nz
copyright:           OSL-3.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable githubblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
